--- a/project/CC2530_Node/CC2530_Node.cbp
+++ b/project/CC2530_Node/CC2530_Node.cbp
@@ -69,6 +69,10 @@
 		</Linker>
 		<Unit filename="../../Makefile" />
 		<Unit filename="../../Makefile.target" />
+		<Unit filename="../../eeprom.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../../includes.h" />
 		<Unit filename="../../node_main.c">
 			<Option compilerVar="CC" />
 		</Unit>
