--- a/project/CC2530_Node/CC2530_Node.cbp
+++ b/project/CC2530_Node/CC2530_Node.cbp
@@ -72,6 +72,7 @@
 		<Unit filename="../../eeprom.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="../../hal_adc.h" />
 		<Unit filename="../../hal_defs.h" />
 		<Unit filename="../../hal_types.h" />
 		<Unit filename="../../haldma.c">
